<resources>
    <string name="app_name">PestSentry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="app_icon_content_description">App icon</string>
    <string name="onboarding_illustration">Onboarding Illustration</string>
    <string name="next">Next</string>
    <string name="boarding_headline">Identify Pests, Protect\nYour Plants.</string>
    <string name="boarding_description">This app helps you quickly and accurately identify plant pests through photos.</string>
    <string name="second_boarding_headline">Easy to Use,\nFast Results.</string>
    <string name="second_boarding_description">Simply snap a photo of the pest, and get detailed information about its type, severity, and control methods.</string>
    <string name="third_boarding_headline">Optimal Harvest, Pest-\nFree.</string>
    <string name="third_boarding_description">With the right knowledge, you can prevent pest infestations and increase your yields.</string>
    <string name="get_started">Get Started</string>
    <string name="profile_menu">Profile</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_icon">Edit profile icon</string>
    <string name="arrow_forward_icon">Arrow forward icon</string>
    <string name="change_password">Change Password</string>
    <string name="lock_icon">Lock icon</string>
    <string name="language_icon">Language icon</string>
    <string name="language">Language</string>
    <string name="about_icon">About icon</string>
    <string name="log_out_icon">Log out icon</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="developed_by">🛠️ Developed By:</string>
    <string name="team_name">C241-PS095 Team</string>
    <string name="our_members">👨🏻‍💻 Our Members:</string>
    <string name="member_list">📱 Candi Agusta Islamiano - A129D4KY4217\n📱 Christopher Amadeus - A505D4KY4371\n🤖 Nicholas Wijaya - M505D4KY3029\n🤖 Mario Holiwono - M505D4KY2096\n🤖 Mira Juwita Ali - M189D4KX3125\n☁️ Jeffry Fane - C011D4KY0786\n☁️ Rama Adhitya Widodo P. - C006D4KY0505</string>
    <string name="credits">🤝🏻 Credits:</string>
    <string name="credit_list">Thanks to storyset.com for providing amazing free illustration</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update_profile">Update Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="menu_analyze">Analyze</string>
    <string name="analyze">Analyze</string>
    <string name="boarding_indicators">Boarding indicators</string>
    <string name="plant_image">Plant image</string>
    <string name="analyze_header_text">Choose image from gallery or take a picture from camera to start analyze your plant.</string>
    <string name="analyze_plant_disease">Analyze Plant Disease</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="location_denied">Permission denied. Unable to access location.</string>
    <string name="you_have_not_selected_an_image">You haven\'t selected an image</string>
    <string name="analyze_plant_pests">Analyze Plant Pests</string>
    <string name="empty_field_error">Field can\'t be empty</string>
    <string name="article_image">Article image</string>
    <string name="password_equal_confirm_password">Password and confirm password must match!</string>
    <string name="article_title">Article Title</string>
    <string name="article_description">article_description</string>
    <string name="search_article">Search Article</string>
    <string name="see_all">See all</string>
    <string name="image_carousel">Image carousel</string>
    <string name="retry">Retry</string>
    <string name="history_menu">History</string>
    <string name="related_articles">Related Articles</string>
    <string name="token_expired">Token Expired</string>
    <string name="token_expired_message">Please login again to continue using the app.</string>
    <string name="delete_history">Delete history</string>
    <string name="result">Result</string>
    <string name="detail_article">Detail Article</string>
    <string name="no_histories_found">No histories found</string>
    <string name="error_image">Error image</string>
    <string name="error_timeout">Error: Timeout</string>
    <string name="delete_histories">Delete histories</string>
    <string name="success_edit_profile">Username and email successfully updated!</string>
    <string name="success_edit_profile_message">Please login again to reflect changes.</string>
    <string name="success_change_password">Password successfully changed!</string>
    <string name="articles">Articles</string>
    <string name="delete_account_icon">Delete account icon</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_dialog_description">This action will delete your account permanently</string>
</resources>