<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.about.AboutFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/about"
            app:titleCentered="true"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
            app:navigationIconTint="@color/black"
            app:titleTextAppearance="@style/ToolBarFont"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_icon_content_description"
                android:src="@drawable/ic_app"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                style="@style/RegularFont"
                android:textSize="16sp"
                android:id="@+id/developed_by_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/developed_by"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_logo"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                style="@style/ExtraBoldFont"
                android:textSize="18sp"
                android:id="@+id/team_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/developed_by_text"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                style="@style/RegularFont"
                android:textSize="16sp"
                android:id="@+id/our_members_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/our_members"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/team_name_text"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                style="@style/RegularFont"
                android:id="@+id/member_list_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="24dp"
                android:text="@string/member_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/our_members_text"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                style="@style/RegularFont"
                android:textSize="16sp"
                android:id="@+id/credits_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="24dp"
                android:text="@string/credits"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/member_list_text"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                style="@style/RegularFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="24dp"
                android:text="@string/credit_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/credits_text"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>