<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/article_image"
        android:layout_width="120dp"
        android:layout_height="82dp"
        android:layout_marginBottom="12dp"
        android:background="@color/grey"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        android:contentDescription="@string/article_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/article_title"
        android:layout_width="100dp"
        android:layout_height="10dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/article_title"
        android:background="@drawable/rounded_skeleton"
        app:layout_constraintStart_toEndOf="@id/article_image"
        app:layout_constraintTop_toTopOf="@id/article_image" />

    <ImageView
        android:id="@+id/article_description"
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:background="@drawable/rounded_skeleton"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/article_description"
        app:layout_constraintStart_toEndOf="@id/article_image"
        app:layout_constraintTop_toBottomOf="@id/article_title" />

    <ImageView
        android:id="@+id/article_description_2"
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:background="@drawable/rounded_skeleton"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/article_description"
        app:layout_constraintStart_toEndOf="@id/article_image"
        app:layout_constraintTop_toBottomOf="@id/article_description" />

    <ImageView
        android:id="@+id/article_description_3"
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:background="@drawable/rounded_skeleton"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/article_description"
        app:layout_constraintStart_toEndOf="@id/article_image"
        app:layout_constraintTop_toBottomOf="@id/article_description_2" />

</androidx.constraintlayout.widget.ConstraintLayout>